--- a/public/css/app.css
+++ b/public/css/app.css
@@ -207,7 +207,8 @@ body {
 .segment.navbar {
   background: #000 !important;
   z-index: +1;
-  position: absolute;
+  position: fixed;
+  top: 0;
   width: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(#0a1332), to(#070e29)) !important;
   background: linear-gradient(to bottom, #0a1332 0%, #070e29 100%) !important;
@@ -2859,7 +2860,8 @@ body {
     background: -webkit-gradient(linear, left top, left bottom, from(#0a1332), to(#070e29)) !important;
     background: linear-gradient(to bottom, #0a1332 0%, #070e29 100%) !important;
     z-index: +1;
-    position: absolute;
+    position: fixed;
+    top: 0;
     width: 100%;
     border-radius: 0;
   }
